# modelmetry-sdk-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  spec.yaml
.openapi-generator/: FILES
examples/: basic.py  observability-flush-sync.py  play.py
modelmetry/: __init__.py  openapi_README.md  sdk.py  version.py
modelmetry/guardrails/: client.py  response.py
modelmetry/guardrails/test/: guardrails_client_test.py
modelmetry/observability/: __init__.py  attributes.py  client.py  event.py  finding.py  ingest.py  observability-client.py  span.py  trace.py
modelmetry/observability/test/: attributes_test.py  client_flushing_test.py  client_test.py  completion_span_test.py  event_test.py  finding_test.py  ingest_test.py  retrieval_span_test.py  span_test.py  trace_test.py
modelmetry/openapi/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
modelmetry/openapi/api/: __init__.py  default_api.py
modelmetry/openapi/docs/: Assessment.md  AssistantMessage.md  AssistantMessageContentsInner.md  AzurePromptShieldsV1Config.md  Call.md  CallGuardrailRequestBody.md  ChatInput.md  ChatInputMessagesInner.md  ChatOutput.md  Check.md  CheckPayloadRequestBody.md  CompletionFamilyData.md  CompletionFamilyDataInput.md  CompletionFamilyDataMessagesInner.md  CompletionPayload.md  CompletionPayloadContext.md  CompletionPayloadInput.md  Cost.md  CreateEventParams.md  CreateFindingParams.md  CreateFindingParamsValue.md  CreateFindingParamsValueOneOf.md  CreateSessionParams.md  (+64 more)
scripts/: publish.sh
test/: client_test.py
(+230 files in other folders)
